Fixing the send area on smaller screens

--- a/views/css/main.css
+++ b/views/css/main.css
@@ -64,6 +64,8 @@ html, body {
   .messenger .send-area {
     display: flex;
     flex-direction: row;
+    flex-grow: 0;
+    min-height: 40px;
   }
     .messenger .send-area textarea {
       width: 100%;
